Buttons todos a funcionar, falta wallet e pontos das cartas certos

--- a/webapp/view/home/game.phtml
+++ b/webapp/view/home/game.phtml
@@ -18,16 +18,26 @@ Layout::includeLayout('LayoutHeader')?>
 	$action = 'new';
 ?>
 <script>
+	//Hit
 	$( function(){
-	$('#button').click(function()
+	$('#buttonhit').click(function()
 			{
 			$('#add_cards_container').load('loadcard');
 			}
 		);
 	});
-	
-	//Draw or Stand
 </script>
+<script>
+	//Stand
+	$( function(){
+	$('#buttonstand').click(function()
+			{
+			$('#add_dealer_cards_container').load('loadcard');
+			}
+		);
+	});
+</script>
+
 <?php
 	//Soma começa a 0
 
@@ -70,49 +80,53 @@ Layout::includeLayout('LayoutHeader')?>
 		if($action == 'stand') {
 			$_SESSION['game']->playDealer();
 		}
-	echo'<div id="all_cards">';	
-		echo'<div id="dealer_cards_container">';
-			echo "Dealer Cards:<br>";
-			foreach($_SESSION['game']->Cards['Dealer'] as $card)
-			echo "
-			<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card\" width=\"180\" height=\"232\" />
-			<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card1\" width=\"180\" height=\"232\" />
-			";
-			echo "<br>Dealer Score: ".$_SESSION['game']->Scores['Dealer'];
+
+	echo'<div id="dealer_cards_container">';
+		echo "<span><br>Dealer Cards:</span><br>";
+		foreach($_SESSION['game']->Cards['Dealer'] as $card)
+		echo '<span>';
+		echo "
+		<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card\" width=\"180\" height=\"232\" />
+		<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card1\" width=\"180\" height=\"232\" />
+		";
+		echo '</span>';
+				echo '<div id="add_dealer_cards_container" style="width: 200px; position: absolute;left: 367px; top:120px;">';echo '</div>';
+
+	echo '</div>';
+
+		echo '<div class="Dealer_Score" style="top:412px;">';
+			echo "Dealer Score: ".$_SESSION['game']->Scores['Dealer'];
 		echo '</div>';
-		
+
+
+
+	echo '<div class="player_cards_container" style="float: left;">';
 		echo "<span> <br>Player Cards:</span><br>";	
-		
 		foreach($_SESSION['game']->Cards['Player'] as $card) 
-		
-		echo '<div class="container">';
-			echo '<span>';
-			echo "<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card2\" width=\"180\" height=\"232\" />
-			<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card3\" width=\"180\" height=\"232\" />";
-			echo '</span>';
-		echo '</div>';
-		echo '<div id="add_cards_container">';
-		echo '</div>';
-		
-	
-	echo '</div>	';
+		echo '<span>';
+		echo "<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card2\" width=\"180\" height=\"232\" />
+		<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card3\" width=\"180\" height=\"232\" />";
+		echo '</span>';
+		echo '<div id="add_cards_container" style="width: 200px; position: absolute;left: 368px; top:412px;">';echo '</div>';
 
-	echo "Player Score: ".$_SESSION['game']->Scores['Player'];
-	
+
+		echo '<div class="Player_Score" style="top:412px;">';
+		echo "Player Score: ".$_SESSION['game']->Scores['Player'];
+
 ?>
-
-
-	
-	     
+	 
 <?php
-	
 	// Options
-	if($_SESSION['game']->Scores['Player'] < 21) echo "<br><a href='hit'>[Hit]</a>";
-	echo "<br><a href='stand'>[Stand]</a><br><a href='novojogo'>[New]</a>";
-	echo '<button id="button"  data-role="button">Click on button</button>';
+	echo '<div class="Options" style="top:412px;">';
+ 	
+	if($_SESSION['game']->Scores['Player'] < 21);
+	echo'<button id="buttonhit"  data-role="buttonhit">Hit</button><br>';
+	echo'<button id="buttonstand"  data-role="buttonstand">Stand</button><br>';
+	echo'<a href="novojogo"><button>New Game</button></a>
+';
 	if($_SESSION['game']->GameEnd == 1)
 	echo "<br>Game Result: ".$_SESSION['game']->getResult();
-
+	echo "</div>"
 ?>
 	
 	
