--- a/webapp/view/home/gamemenu.phtml
+++ b/webapp/view/home/gamemenu.phtml
@@ -24,7 +24,7 @@ Layout::includeLayout('LayoutHeader')?>
 <br></br>
 <div id="menu" style="text-align: center;margin-right: auto;margin-left: auto">
    <button><a href="index" class="Fade">Sair</a></button><br></br>
-   <button><a href="game" class="Fade">Começar Jogo</a></button><br></br>
+   <button><a href="blackjack" class="Fade">Começar Jogo</a></button><br></br>
 </div>
 
 <div id="content">
