--- a/webapp/view/home/game.phtml
+++ b/webapp/view/home/game.phtml
@@ -13,7 +13,7 @@ Layout::includeLayout('LayoutHeader')?>
 <br></br>
 <br></br>
 <?php
-	$CardsArray = array("cardClubs2", "cardClubs3", "cardClubs4", "cardClubs5", "cardClubs6", "cardClubs7", "cardClubs8", "cardClubs9", "cardClubs10", "cardClubsA", "cardClubsJ", "cardClubsK", "cardClubsQ", "cardDiamonds2", "cardDiamonds3", "cardDiamonds4", "cardDiamonds5", "cardDiamonds6", "cardDiamonds7", "cardDiamonds8", "cardDiamonds9", "cardDiamonds10", "cardDiamondsA", "cardDiamondsJ", "cardDiamondsK", "cardDiamondsQ", "cardHearts2", "cardHearts3", "cardHearts4", "cardHearts5", "cardHearts6", "cardHearts7", "cardHearts8", "cardHearts9.", "cardHearts10", "cardHeartsA", "cardHeartsJ", "cardHeartsK", "cardHeartsQ", "cardSpades2", "cardSpades3", "cardSpades4", "cardSpades5", "cardSpades6", "cardSpades7", "cardSpades8", "cardSpades9", "cardSpades10", "cardSpadesA", "cardSpadesJ", "cardSpadesK", "cardSpadesQ");
+	$Cards = array("cardClubs2", "cardClubs3", "cardClubs4", "cardClubs5", "cardClubs6", "cardClubs7", "cardClubs8", "cardClubs9", "cardClubs10", "cardClubsA", "cardClubsJ", "cardClubsK", "cardClubsQ", "cardDiamonds2", "cardDiamonds3", "cardDiamonds4", "cardDiamonds5", "cardDiamonds6", "cardDiamonds7", "cardDiamonds8", "cardDiamonds9", "cardDiamonds10", "cardDiamondsA", "cardDiamondsJ", "cardDiamondsK", "cardDiamondsQ", "cardHearts2", "cardHearts3", "cardHearts4", "cardHearts5", "cardHearts6", "cardHearts7", "cardHearts8", "cardHearts9.", "cardHearts10", "cardHeartsA", "cardHeartsJ", "cardHeartsK", "cardHeartsQ", "cardSpades2", "cardSpades3", "cardSpades4", "cardSpades5", "cardSpades6", "cardSpades7", "cardSpades8", "cardSpades9", "cardSpades10", "cardSpadesA", "cardSpadesJ", "cardSpadesK", "cardSpadesQ");
 	//Stand/Hit...
 	$action = 'new';
 ?>
@@ -48,19 +48,19 @@ Layout::includeLayout('LayoutHeader')?>
 	for($x=0; $x<1; $x++){
 
 		//Generate the first 2 cards
-		$rand_key = array_rand($CardsArray, 1);
-		$rand_card = $CardsArray[$rand_key];
+		$rand_key = array_rand($Cards, 1);
+		$rand_card = $Cards[$rand_key];
 
 		//Generate 1 random card to dealer
-		$rand_key1 = array_rand($CardsArray, 1);
-		$rand_card1 = $CardsArray[$rand_key1];
+		$rand_key1 = array_rand($Cards, 1);
+		$rand_card1 = $Cards[$rand_key1];
 		
 		//Generate 1 random card to player
-		$rand_key2 = array_rand($CardsArray, 1);
-		$rand_card2 = $CardsArray[$rand_key2];
+		$rand_key2 = array_rand($Cards, 1);
+		$rand_card2 = $Cards[$rand_key2];
 
-		$rand_key3 = array_rand($CardsArray, 1);
-		$rand_card3 = $CardsArray[$rand_key3];
+		$rand_key3 = array_rand($Cards, 1);
+		$rand_card3 = $Cards[$rand_key3];
 	}
 	if(isset($_GET['action'])) $action = $_GET['action'];
 	
