Database criada, pontos certos, cartas a adicionar com sessions, falta carregar fichas

--- a/webapp/view/home/login.phtml
+++ b/webapp/view/home/login.phtml
@@ -1,7 +1,7 @@
 <?php 
 use ArmoredCore\WebObjects\Layout;
 
-Layout::includeLayout('LayoutHeader')?>
+Layout::includeLayout('LayoutHome')?>
 
 <br></br>
 <br></br>
