texto centrado no play

--- a/webapp/view/home/play.phtml
+++ b/webapp/view/home/play.phtml
@@ -23,7 +23,7 @@ Layout::includeLayout('LayoutHeader'); ?>
     <br>
 
     <!-- Intro -->
-    <div class="container text-left">
+    <div id="menu" style="text-align: center;margin-right: auto;margin-left: auto">
             <br>
             <form NAME ="form" METHOD = "POST" ACTION = "<?=URL::toRoute('home/stay')?>">    
                 <button class="stay" name="stay">STAND</button>
