--- a/webapp/view/home/signup.phtml
+++ b/webapp/view/home/signup.phtml
@@ -1,57 +1,97 @@
 <?php 
 use ArmoredCore\WebObjects\Layout;
-
+use ArmoredCore\WebObjects\URL;
 Layout::includeLayout('LayoutHeader')?>
+<?php
 
+
+// REGISTER USER
+if (isset($_POST['reg_user'])) {
+  // receive all input values from the form
+  $username = mysqli_real_escape_string($db, $_POST['username']);
+  $date = mysqli_real_escape_string($db, $_POST['date']);
+  $name = mysqli_real_escape_string($db, $_POST['name']);
+  $email = mysqli_real_escape_string($db, $_POST['email']);
+  $password_1 = mysqli_real_escape_string($db, $_POST['password_1']);
+  $password_2 = mysqli_real_escape_string($db, $_POST['password_2']);
+
+  // form validation: ensure that the form is correctly filled ...
+  // by adding (array_push()) corresponding error unto $errors array
+  if (empty($email)) { array_push($errors, "Email is required"); }
+  if (empty($date)) { array_push($errors, "Username is required"); }
+  if (empty($name)) { array_push($errors, "Name is required"); }
+  if (empty($password_1)) { array_push($errors, "Password is required"); }
+  if ($password_1 != $password_2) {
+	array_push($errors, "The two passwords do not match");
+  }
+  //VERIFAÇÃO DO USER OU EMAIL
+  $user_check_query = "SELECT * FROM users WHERE username='$username' OR email='$email' LIMIT 1";
+  $result = mysqli_query($db, $user_check_query);
+  $user = mysqli_fetch_assoc($result);
+  
+  //VERIFICA SE O UTILIZADOR JÁ EXISTE
+  if ($user) { 
+    if ($user['username'] === $username) {
+      array_push($errors, "Username already exists");
+    }
+
+    if ($user['email'] === $email) {
+      array_push($errors, "email already exists");
+    }
+  }
+
+  // Se não existir, autentica o utilizador
+  if (count($errors) == 0) {
+  	$password = md5($password_1);//Encripta a password
+
+  	$query = "INSERT INTO users (username, email, password) 
+  			  VALUES('$username', '$email', '$password')";
+  	mysqli_query($db, $query);
+  	$_SESSION['username'] = $username;
+  	$_SESSION['success'] = "You are now logged in";
+  	header('location: index.php');
+  }
+}
+?>
 <br></br>
 <br></br>
-	<!-- container -->
-	<div class="container">
-
-		<ol class="breadcrumb">
-			<li><a href="index.html">Home</a></li>
-			<li class="active">User access</li>
-		</ol>
-
-		<div class="row">
-			
-			<!-- Article main content -->
-			<article class="col-xs-12 maincontent">
-				<header class="page-header">
-					<h1 class="page-title">Sign in</h1>
-				</header>
-				
-				<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-					<div class="panel panel-default">
-						<div class="panel-body">
-							<h3 class="thin text-center">Create an Account</h3>
-							<hr>
-							
-							<form>
-								<div class="top-margin">
-									<label>Username/Email <span class="text-danger">*</span></label>
-									<input type="text" class="form-control">
-								</div>
-								<div class="top-margin">
-									<label>Password <span class="text-danger">*</span></label>
-									<input type="password" id="password" class="form-control" required > <br>
-								</div>
-								<div class="row">
-									
-									<div class="text-right" style="margin-right: 20px";>
-										<a href="gamemenu">Sign Up</a>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-
-				</div>
-				
-			</article>
-			<!-- /Article -->
-
-		</div>
-	</div>	<!-- /container -->
+<div class="header">
+  	<h2>Register</h2>
+  </div>
+	
+  <form method="post" action="login.phtml">
+  	<div class="input-group">
+  	  <label>Username</label>
+  	  <input type="text" name="username">
+  	</div>
+  	<div class="input-group">
+  	  <label>Birth Date</label>
+  	  <input type="text" name="date">
+  	</div>
+  	<div class="input-group">
+  	  <label>Full Name</label>
+  	  <input type="text" name="name">
+  	</div>
+  	<div class="input-group">
+  	  <label>Email</label>
+  	  <input type="email" name="email">
+  	</div>
+  	<div class="input-group">
+  	  <label>Password</label>
+  	  <input type="password" name="password_1">
+  	</div>
+  	<div class="input-group">
+  	  <label>Confirm password</label>
+  	  <input type="password" name="password_2">
+  	</div>
+  	<div class="input-group">
+  	  <button type="submit" class="btn" name="reg_user">Register</button>
+  	</div>
+  	<p>
+  		Already a member? <a href="login.phtml">Sign in</a>
+  	</p>
+  </form>
+</body>
+</html>
 
 <?php Layout::includeLayout('LayoutFooter') ?>
