--- a/webapp/view/home/index.phtml
+++ b/webapp/view/home/index.phtml
@@ -19,5 +19,15 @@ Layout::includeLayout('LayoutHome')?>
             </div>
         </div>
     </div>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Home</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+
+</body>
+</html>
 </body>
 <?php Layout::includeLayout('LayoutFooter')?>
