--- a/webapp/view/home/signup.phtml
+++ b/webapp/view/home/signup.phtml
@@ -52,6 +52,33 @@ if (isset($_POST['reg_user'])) {
   	header('location: index.php');
   }
 }
+// LOGIN USER
+if (isset($_POST['login_user'])) {
+  $username = mysqli_real_escape_string($db, $_POST['username']);
+  $password = mysqli_real_escape_string($db, $_POST['password']);
+
+  if (empty($username)) {
+  	array_push($errors, "Username is required");
+  }
+  if (empty($password)) {
+  	array_push($errors, "Password is required");
+  }
+
+  if (count($errors) == 0) {
+  	$password = md5($password);
+  	$query = "SELECT * FROM users WHERE username='$username' AND password='$password'";
+  	$results = mysqli_query($db, $query);
+  	if (mysqli_num_rows($results) == 1) {
+  	  $_SESSION['username'] = $username;
+  	  $_SESSION['success'] = "You are now logged in";
+  	  header('location: index.php');
+  	}else {
+  		array_push($errors, "Wrong username/password combination");
+  	}
+  }
+}
+
+?>
 ?>
 <br></br>
 <br></br>
@@ -59,7 +86,7 @@ if (isset($_POST['reg_user'])) {
   	<h2>Register</h2>
   </div>
 	
-  <form method="post" action="login.phtml">
+  <form method="post" action="gamemenu">
   	<div class="input-group">
   	  <label>Username</label>
   	  <input type="text" name="username">
@@ -88,7 +115,7 @@ if (isset($_POST['reg_user'])) {
   	  <button type="submit" class="btn" name="reg_user">Register</button>
   	</div>
   	<p>
-  		Already a member? <a href="login.phtml">Sign in</a>
+  		Already a member? <a href="login">Sign in</a>
   	</p>
   </form>
 </body>
